--- a/WQD7001-project.html
+++ b/WQD7001-project.html
@@ -594,15 +594,15 @@ sum(is.na(df1))</code></pre>
 <pre class="r"><code># 8. List number of missing data in column
 colSums(is.na(df1))</code></pre>
 <pre><code>##     school        sex        age    address    famsize    Pstatus       Medu 
-##          2          1          0          1          4          3          2 
+##          0          1          2          2          3          2          0 
 ##       Fedu       Mjob       Fjob     reason   guardian traveltime  studytime 
-##          0          0          2          1          0          3          2 
+##          3          1          1          1          4          1          2 
 ##   failures  schoolsup     famsup       paid activities    nursery     higher 
-##          0          3          0          1          5          0          1 
+##          0          0          1          3          1          1          2 
 ##   internet   romantic     famrel   freetime      goout       Dalc       Walc 
-##          2          0          2          1          1          2          1 
+##          2          1          2          4          0          1          1 
 ##     health   absences         G1         G2         G3 
-##          3          1          2          2          2</code></pre>
+##          1          3          3          1          0</code></pre>
 <pre class="r"><code># 9 List rows with missing data
 missingdata &lt;- df1[!complete.cases(df1), ]
 sum(is.na(missingdata))</code></pre>
@@ -684,54 +684,54 @@ describe(df1.impute)</code></pre>
 
 ## Warning in FUN(newX[, i], ...): no non-missing arguments to max; returning -Inf</code></pre>
 <pre><code>##            vars   n  mean   sd median trimmed  mad min  max range  skew
-## school*       1 393  1.12 0.32      1    1.02 0.00   1    2     1  2.37
+## school*       1 395  1.12 0.32      1    1.02 0.00   1    2     1  2.38
 ## sex*          2 394  1.47 0.50      1    1.47 0.00   1    2     1  0.10
 ## age           3 395 16.70 1.28     17   16.63 1.48  15   22     7  0.46
-## address*      4 394  1.78 0.42      2    1.84 0.00   1    2     1 -1.32
-## famsize*      5 391  1.71 0.46      2    1.76 0.00   1    2     1 -0.91
-## Pstatus*      6 392  1.90 0.31      2    1.99 0.00   1    2     1 -2.57
-## Medu          7 395  2.74 1.09      3    2.81 1.48   0    4     4 -0.31
-## Fedu          8 395  2.52 1.09      2    2.53 1.48   0    4     4 -0.03
-## Mjob*         9 395  3.17 1.23      3    3.21 1.48   1    5     4 -0.33
-## Fjob*        10 393  3.28 0.86      3    3.32 0.00   1    5     4 -0.36
-## reason*      11 394  2.26 1.21      2    2.20 1.48   1    4     3  0.40
-## guardian*    12 395  1.85 0.54      2    1.84 0.00   1    3     2 -0.11
-## traveltime   13 395  1.45 0.70      1    1.31 0.00   1    4     3  1.61
-## studytime    14 395  2.04 0.84      2    1.96 0.00   1    4     3  0.64
+## address*      4 393  1.78 0.42      2    1.85 0.00   1    2     1 -1.34
+## famsize*      5 392  1.71 0.45      2    1.77 0.00   1    2     1 -0.95
+## Pstatus*      6 393  1.90 0.31      2    1.99 0.00   1    2     1 -2.58
+## Medu          7 395  2.75 1.09      3    2.82 1.48   0    4     4 -0.32
+## Fedu          8 395  2.51 1.08      2    2.52 1.48   0    4     4 -0.02
+## Mjob*         9 394  3.17 1.23      3    3.21 1.48   1    5     4 -0.33
+## Fjob*        10 394  3.28 0.86      3    3.32 0.00   1    5     4 -0.36
+## reason*      11 394  2.25 1.21      2    2.19 1.48   1    4     3  0.41
+## guardian*    12 391  1.85 0.54      2    1.84 0.00   1    3     2 -0.11
+## traveltime   13 395  1.45 0.70      1    1.31 0.00   1    4     3  1.59
+## studytime    14 395  2.04 0.84      2    1.97 0.00   1    4     3  0.63
 ## failures     15 395  0.33 0.74      0    0.14 0.00   0    3     3  2.37
-## schoolsup    16 392   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## famsup       17 395   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## paid         18 394   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## activities   19 390   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## nursery      20 395   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## higher       21 394   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## schoolsup    16 395   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## famsup       17 394   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## paid         18 392   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## activities   19 394   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## nursery      20 394   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## higher       21 393   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
 ## internet     22 393   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## romantic     23 395   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
-## famrel       24 395  3.94 0.89      4    4.03 1.48   1    5     4 -0.95
-## freetime     25 395  3.23 1.00      3    3.23 1.48   1    5     4 -0.16
-## goout        26 395  3.11 1.11      3    3.09 1.48   1    5     4  0.11
-## Dalc         27 395  1.48 0.89      1    1.27 0.00   1    5     4  2.17
+## romantic     23 394   NaN   NA     NA     NaN   NA Inf -Inf  -Inf    NA
+## famrel       24 395  3.94 0.90      4    4.03 1.48   1    5     4 -0.95
+## freetime     25 395  3.23 0.99      3    3.22 1.48   1    5     4 -0.16
+## goout        26 395  3.11 1.11      3    3.09 1.48   1    5     4  0.12
+## Dalc         27 395  1.48 0.89      1    1.26 0.00   1    5     4  2.20
 ## Walc         28 395  2.29 1.29      2    2.15 1.48   1    5     4  0.61
 ## health       29 395  3.55 1.39      4    3.69 1.48   1    5     4 -0.49
-## absences     30 395  5.70 8.00      4    4.23 5.93   0   75    75  3.65
-## G1           31 395 10.92 3.31     11   10.82 4.45   3   19    16  0.23
-## G2           32 395 10.70 3.75     11   10.83 2.97   0   19    19 -0.42
-## G3           33 395 10.47 4.52     11   10.88 4.45   0   20    20 -0.73
+## absences     30 395  5.68 7.98      4    4.21 5.93   0   75    75  3.68
+## G1           31 395 10.93 3.31     11   10.82 4.45   3   19    16  0.23
+## G2           32 395 10.72 3.76     11   10.85 2.97   0   19    19 -0.43
+## G3           33 395 10.42 4.58     11   10.84 4.45   0   20    20 -0.73
 ##            kurtosis   se
-## school*        3.64 0.02
+## school*        3.68 0.02
 ## sex*          -1.99 0.03
 ## age           -0.03 0.06
-## address*      -0.25 0.02
-## famsize*      -1.17 0.02
-## Pstatus*       4.64 0.02
-## Medu          -1.09 0.05
-## Fedu          -1.21 0.05
-## Mjob*         -0.69 0.06
+## address*      -0.21 0.02
+## famsize*      -1.11 0.02
+## Pstatus*       4.66 0.02
+## Medu          -1.10 0.06
+## Fedu          -1.19 0.05
+## Mjob*         -0.70 0.06
 ## Fjob*          0.97 0.04
-## reason*       -1.41 0.06
-## guardian*      0.15 0.03
-## traveltime     2.30 0.04
-## studytime     -0.01 0.04
+## reason*       -1.40 0.06
+## guardian*      0.14 0.03
+## traveltime     2.27 0.04
+## studytime     -0.03 0.04
 ## failures       4.89 0.04
 ## schoolsup        NA   NA
 ## famsup           NA   NA
@@ -741,16 +741,86 @@ describe(df1.impute)</code></pre>
 ## higher           NA   NA
 ## internet         NA   NA
 ## romantic         NA   NA
-## famrel         1.12 0.04
-## freetime      -0.32 0.05
-## goout         -0.78 0.06
-## Dalc           4.65 0.04
+## famrel         1.10 0.05
+## freetime      -0.29 0.05
+## goout         -0.79 0.06
+## Dalc           4.78 0.04
 ## Walc          -0.80 0.06
-## health        -1.02 0.07
-## absences      21.32 0.40
+## health        -1.03 0.07
+## absences      21.58 0.40
 ## G1            -0.70 0.17
 ## G2             0.60 0.19
-## G3             0.44 0.23</code></pre>
+## G3             0.37 0.23</code></pre>
+</div>
+<div id="descriptive-analysis" class="section level1">
+<h1>Descriptive Analysis</h1>
+<pre class="r"><code>summary(df1)</code></pre>
+<pre><code>##  school     sex           age       address    famsize    Pstatus   
+##  GP:349   F   :207   Min.   :15.0   R   : 87   LE3 :112   A   : 41  
+##  MS: 46   M   :187   1st Qu.:16.0   U   :306   GT3 :280   T   :352  
+##           NA&#39;s:  1   Median :17.0   NA&#39;s:  2   NA&#39;s:  3   NA&#39;s:  2  
+##                      Mean   :16.7                                   
+##                      3rd Qu.:18.0                                   
+##                      Max.   :22.0                                   
+##                      NA&#39;s   :2                                      
+##       Medu            Fedu             Mjob           Fjob            reason   
+##  Min.   :0.000   Min.   :0.000   at_home : 59   at_home : 20   course    :145  
+##  1st Qu.:2.000   1st Qu.:2.000   health  : 34   health  : 18   home      :109  
+##  Median :3.000   Median :2.000   other   :140   other   :216   other     : 35  
+##  Mean   :2.749   Mean   :2.518   services:103   services:111   reputation:105  
+##  3rd Qu.:4.000   3rd Qu.:3.000   teacher : 58   teacher : 29   NA&#39;s      :  1  
+##  Max.   :4.000   Max.   :4.000   NA&#39;s    :  1   NA&#39;s    :  1                   
+##                  NA&#39;s   :3                                                     
+##    guardian     traveltime      studytime        failures      schoolsup      
+##  father: 89   Min.   :1.000   Min.   :1.000   Min.   :0.0000   Mode :logical  
+##  mother:270   1st Qu.:1.000   1st Qu.:1.000   1st Qu.:0.0000   FALSE:344      
+##  other : 32   Median :1.000   Median :2.000   Median :0.0000   TRUE :51       
+##  NA&#39;s  :  4   Mean   :1.449   Mean   :2.041   Mean   :0.3342                  
+##               3rd Qu.:2.000   3rd Qu.:2.000   3rd Qu.:0.0000                  
+##               Max.   :4.000   Max.   :4.000   Max.   :3.0000                  
+##               NA&#39;s   :1       NA&#39;s   :2                                       
+##    famsup           paid         activities       nursery       
+##  Mode :logical   Mode :logical   Mode :logical   Mode :logical  
+##  FALSE:153       FALSE:212       FALSE:193       FALSE:81       
+##  TRUE :241       TRUE :180       TRUE :201       TRUE :313      
+##  NA&#39;s :1         NA&#39;s :3         NA&#39;s :1         NA&#39;s :1        
+##                                                                 
+##                                                                 
+##                                                                 
+##    higher         internet        romantic           famrel     
+##  Mode :logical   Mode :logical   Mode :logical   Min.   :1.000  
+##  FALSE:20        FALSE:66        FALSE:262       1st Qu.:4.000  
+##  TRUE :373       TRUE :327       TRUE :132       Median :4.000  
+##  NA&#39;s :2         NA&#39;s :2         NA&#39;s :1         Mean   :3.941  
+##                                                  3rd Qu.:5.000  
+##                                                  Max.   :5.000  
+##                                                  NA&#39;s   :2      
+##     freetime         goout            Dalc            Walc      
+##  Min.   :1.000   Min.   :1.000   Min.   :1.000   Min.   :1.000  
+##  1st Qu.:3.000   1st Qu.:2.000   1st Qu.:1.000   1st Qu.:1.000  
+##  Median :3.000   Median :3.000   Median :1.000   Median :2.000  
+##  Mean   :3.233   Mean   :3.109   Mean   :1.477   Mean   :2.289  
+##  3rd Qu.:4.000   3rd Qu.:4.000   3rd Qu.:2.000   3rd Qu.:3.000  
+##  Max.   :5.000   Max.   :5.000   Max.   :5.000   Max.   :5.000  
+##  NA&#39;s   :4                       NA&#39;s   :1       NA&#39;s   :1      
+##      health         absences            G1              G2       
+##  Min.   :1.000   Min.   : 0.000   Min.   : 3.00   Min.   : 0.00  
+##  1st Qu.:3.000   1st Qu.: 0.000   1st Qu.: 8.00   1st Qu.: 9.00  
+##  Median :4.000   Median : 4.000   Median :11.00   Median :11.00  
+##  Mean   :3.553   Mean   : 5.694   Mean   :10.93   Mean   :10.72  
+##  3rd Qu.:5.000   3rd Qu.: 8.000   3rd Qu.:13.00   3rd Qu.:13.00  
+##  Max.   :5.000   Max.   :75.000   Max.   :19.00   Max.   :19.00  
+##  NA&#39;s   :1       NA&#39;s   :3        NA&#39;s   :3       NA&#39;s   :1      
+##        G3       
+##  Min.   : 0.00  
+##  1st Qu.: 8.00  
+##  Median :11.00  
+##  Mean   :10.42  
+##  3rd Qu.:14.00  
+##  Max.   :20.00  
+## </code></pre>
+<pre class="r"><code>sum(is.na(df1))</code></pre>
+<pre><code>## [1] 50</code></pre>
 </div>
 
 
