Update github link

--- a/Presentation/slidy_presentation.html
+++ b/Presentation/slidy_presentation.html
@@ -396,11 +396,11 @@ list-style-type: none;
   <h1 class="title">Exploratory Analysis on Relationship between Parent
 Education and Children Success</h1>
   <p class="author">
-<p>Aainaa</p>
-<p>Ann Lee</p>
-<p>Rose Tiong</p>
-<p>Maimul Hoque S2142027</p>
-Noel Ng
+<p>Maimul Hoque (S2142027) - Group Leader</p>
+<p>Aainaa Nadia Binti Mohammed Hashim (S2043599)</p>
+<p>Noel Ng Fong Nian (S2142165)</p>
+<p>Rose Tiong (S2123103)</p>
+Wong Ann Li (S2148268)
   </p>
   <p class="date">2022-06-18</p>
 </div>
