--- a/Presentation/slidy_presentation.html
+++ b/Presentation/slidy_presentation.html
@@ -413,7 +413,7 @@ children, in terms of if the correlation occurs between parents’
 education background and children’s academic performance. We are keen to
 know if the statement mentioned above makes sense.</li>
 <li>The analysis was conducted on the Kaggle dataset (Student Alcohol
-Consumption | Kaggle).</li>
+Consumption | Kaggle). <a href="https://www.kaggle.com/datasets/uciml/student-alcohol-consumption" class="uri">https://www.kaggle.com/datasets/uciml/student-alcohol-consumption</a></li>
 <li>EDA and App Building were conducted by using R studio.</li>
 </ul>
 </div>
@@ -425,14 +425,14 @@ Consumption | Kaggle).</li>
 <div id="design-thinking" class="slide section level1">
 <h1>Design Thinking</h1>
 <ul>
-<li>Phase 1: Empathise – Understood the need of the schools, teachers
+<li>Phase 1: Empathize – Understood the need of the schools, teachers
 and parents in identifying what parents can do to help children perform
 better in schools.</li>
 <li>Phase 2: Define – Set our goal: represent the kids to inform their
 parents that their education level influence the kids’ school grade
 too.</li>
-<li>In order to let the users understood more about our topic, we
-prepared an infographic at overview of Shiny App to attract their
+<li>Phase 3: In order to let the users understood more about our topic,
+we prepared an infographic at overview of Shiny App to attract their
 attention.</li>
 </ul>
 </div>
@@ -454,7 +454,7 @@ the user. For example, the user chooses the available dependent and
 independent variables and shows the graph within seconds.</li>
 </ul>
 <p>Up Maths! app link: <a href="https://iqeiaz-0i0.shinyapps.io/ShinyApp7001/" class="uri">https://iqeiaz-0i0.shinyapps.io/ShinyApp7001/</a></p>
-<p>R codes and supporting document on Github: <a href="https://github.com/maimul/WQD7001" class="uri">https://github.com/maimul/WQD7001</a></p>
+<p>R codes and supporting document on Github: <a href="https://github.com/maimul/WQD7001/tree/main/ShinyApp7001" class="uri">https://github.com/maimul/WQD7001/tree/main/ShinyApp7001</a></p>
 </div>
 
   <!-- dynamically load mathjax for compatibility with self-contained -->
